--- a/src/TestSerialPort/Makefile
+++ b/src/TestSerialPort/Makefile
@@ -5,7 +5,7 @@ CC=$(CXX)
 CPPFLAGS=-W -Wall -pipe -ggdb3
 CXXFLAGS=-I. -I.. -I$(ROOT) -I$(ROOT)/DCE -I/usr/include/mysql
 LDFLAGS=-L$(ROOT)/lib
-LDLIBS=-lDCECommon -lPlutoUtils -lSerial -lmysqlclient_r
+LDLIBS=-lDCECommon -lPlutoUtils -lSerial -lSerializeClass -lmysqlclient_r
 
 SOURCES=Main.cpp ../Generic_Serial_Device/IOUtils.cpp
 
