--- a/src/Shared_JSON_Data_Provider_Plug/Shared_JSON_Data_Provider_Plug_DLL.vcproj
+++ b/src/Shared_JSON_Data_Provider_Plug/Shared_JSON_Data_Provider_Plug_DLL.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="Basic_XML_Data_Source_Plugin"
+	Name="Shared_JSON_Data_Provider_Plug"
 	ProjectGUID="{BFB764EC-A94C-414F-AE25-7EECDFEE8BBA}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..;../DCE/;../../libs/Libraries/pthreads-win32/include;/mysql/include;../../libs/CrossPlatform/LibXML2/include"
+				AdditionalIncludeDirectories="..;../DCE/;../../libs/Libraries/pthreads-win32/include;/mysql/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;EMBEDDED_LMCE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -32,13 +32,13 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE.lib pluto_main.lib libmysql.lib libxml2.lib"
-				OutputFile="../Debug/Basic_XML_Data_Source_Plugin.dll"
+				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE.lib"
+				OutputFile="../Debug/Shared_JSON_Data_Provider_Plug_Lite.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;../../libs/Libraries/pthreads-win32/lib&quot;;../lib;../../libs/CrossPlatform/LibXML2/lib;/mysql/lib/debug"
-				ModuleDefinitionFile="Basic_XML_Data_Source_Plugin.def"
+				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
+				ModuleDefinitionFile="Shared_JSON_Data_Provider_Plug.def"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/Basic_XML_Data_Source_Plugin.pdb"
+				ProgramDatabaseFile="$(OutDir)/Shared_JSON_Data_Provider_Plug.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -73,7 +73,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories="..;../DCE/;&quot;../../libs/Libraries/pthreads-win32/include&quot;;/mysql/include;../../libs/CrossPlatform/LibXML2/include"
+				AdditionalIncludeDirectories="..;../DCE/;../../libs/Libraries/pthreads-win32/include;/mysql/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -86,11 +86,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE-r.lib pluto_main-r.lib libmysql.lib libxml2.lib"
-				OutputFile="../bin/Basic_XML_Data_Source_Plugin.dll"
+				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE-r.lib"
+				OutputFile="../bin/Shared_JSON_Data_Provider_Plug.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;../../libs/Libraries/pthreads-win32/lib&quot;;../lib;../../libs/CrossPlatform/LibXML2/lib;/mysql/lib/debug"
-				ModuleDefinitionFile="Basic_XML_Data_Source_Plugin.def"
+				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
+				ModuleDefinitionFile="Shared_JSON_Data_Provider_Plug.def"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -125,41 +125,35 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm">
 			<File
-				RelativePath="Basic_XML_Data_Source_Plugin.cpp">
+				RelativePath="..\Data_Provider_Catalog_Plugin\Data_Provider_CallBack.cpp">
 			</File>
 			<File
-				RelativePath="Basic_XML_Data_Source_Plugin.def">
+				RelativePath="..\Data_Provider_Catalog_Plugin\Data_Provider_Factory.cpp">
 			</File>
 			<File
-				RelativePath="..\Gen_Devices\Basic_XML_Data_Source_PluginBase.cpp">
+				RelativePath=".\DPS_MainJSONData.cpp">
 			</File>
 			<File
 				RelativePath="Main.cpp">
 			</File>
 			<File
-				RelativePath="..\XML_Data_Handler_Plugin\XML_Data_CallBack.cpp">
+				RelativePath="Shared_JSON_Data_Provider_Plug.cpp">
 			</File>
 			<File
-				RelativePath="..\XML_Data_Handler_Plugin\XML_Data_Factory.cpp">
+				RelativePath="Shared_JSON_Data_Provider_Plug.def">
 			</File>
 			<File
-				RelativePath="..\XML_Data_Handler_Plugin\XML_Data_Handler_Plugin.cpp">
-			</File>
-			<File
-				RelativePath="..\Gen_Devices\XML_Data_Handler_PluginBase.cpp">
-			</File>
-			<File
-				RelativePath=".\XML_Data_Source.cpp">
+				RelativePath="..\Gen_Devices\Shared_JSON_Data_Provider_PlugBase.cpp">
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
-				RelativePath="Basic_XML_Data_Source_Plugin.h">
+				RelativePath="..\DCE\DCEDeviceData_Impl.h">
 			</File>
 			<File
-				RelativePath="..\DCE\DCEDeviceData_Impl.h">
+				RelativePath="Shared_JSON_Data_Provider_Plug.h">
 			</File>
 		</Filter>
 		<Filter
