--- a/src/DCERouter/Makefile.lite
+++ b/src/DCERouter/Makefile.lite
@@ -1,4 +1,4 @@
-SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
+SNR_CPPFLAGS ?= 
 
 ROOT = ..
 CXXFLAGS = -Wall -Os -DxAUDIDEMO -fmessage-length=0
@@ -8,16 +8,7 @@ LDFLAGS = -L$(ROOT)/lib #-lxml2
 
 #LDLIBS = -lpthread -lmysqlclient_r -lattr -lDCECommon -lSerializeClass -lPlutoUtils -lpluto_main -lFakeEPG -lqt-mt -lmyth-0.16 -lmythtv-0.16
 #-lxml2
-LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl -ljson -lxml2#-lpluto_main -lattr
-
-#<-mkr_B_use_mysql_wrapper_b->
-#CPPFLAGS += -I/usr/include/mysql
-#LDFLAGS += -lmysqlclient_r
-#<-mkr_B_use_mysql_wrapper_e->
-
-#<-mkr_b_use_mysql_wrapper_b->
-#CPPFLAGS += -DUSE_MYSQL_WRAPPER
-#<-mkr_b_use_mysql_wrapper_e->
+LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl -ljson -lz -lxml2 #-lpluto_main -lattr
 
 CPPFLAGS += -DEMBEDDED_LMCE
 ifeq ($(ARCH),mipsel)
