--- a/src/General_Info_Plugin_Lite/Makefile.lite
+++ b/src/General_Info_Plugin_Lite/Makefile.lite
@@ -24,7 +24,7 @@ ifeq ($(ARCH),mipsel)
 endif
 
 CXXFLAGS +=
-CPPFLAGS += -DEMBEDDED_LMCE
+CPPFLAGS += -DEMBEDDED_LMCE -DDEBUG
 LDFLAGS +=
 XTRALDLIBS =
 
