--- a/src/Basic_XML_Data_Source_Plugin_Lite/Makefile.lite
+++ b/src/Basic_XML_Data_Source_Plugin_Lite/Makefile.lite
@@ -25,20 +25,11 @@ endif
 
 CXXFLAGS +=
 CPPFLAGS += -I/usr/include/libxml2/ -DEMBEDDED_LMCE -DDEBUG
-LDFLAGS += -lxml2
+LDFLAGS += #-lxml2
 XTRALDLIBS =
 
 Gen_Dev_Files +=
 sources += XML_Data_Source.cpp
-
-#<-mkr_B_use_mysql_wrapper_b->
-CPPFLAGS += -I/usr/include/mysql
-LDFLAGS += -lmysqlclient_r
-#<-mkr_B_use_mysql_wrapper_e->
-
-#<-mkr_b_use_mysql_wrapper_b->
-CPPFLAGS += -DUSE_MYSQL_WRAPPER
-#<-mkr_b_use_mysql_wrapper_e->
 
 #<-dceag-mf-b->
 LDLIBS = $(XTRALDLIBS) $(BASELDLIBS)
