--- a/src/pluto_media/pluto_media.vcproj
+++ b/src/pluto_media/pluto_media.vcproj
@@ -124,6 +124,9 @@
 				RelativePath=".\Table_AttributeType.cpp">
 			</File>
 			<File
+				RelativePath=".\Table_Attribute_MediaType.cpp">
+			</File>
+			<File
 				RelativePath=".\Table_Attribute_Settings.cpp">
 			</File>
 			<File
