--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ LIBRARIES=DCE PlutoUtils SerializeClass BD VIPShared FakeEPG
 APPS=DCERouter MessageSend 
 DCEDEVS=App_Server Disk_Drive Xine_Player 
 PLUGINS=Datagrid_Plugin File_Grids_Plugin Media_Plugin Orbiter_Plugin Xine_Plugin \
-	General_Info_Plugin Mozilla_Plugin Lighting_Plugin Climate_Plugin Security_Plugin Telecom_Plugin \
+	General_Info_Plugin Lighting_Plugin Climate_Plugin Security_Plugin Telecom_Plugin \
 	MythTV_PlugIn
 CONFLICTING=Bluetooth_Dongle Orbiter OrbiterGen
 
