--- a/src/General_Info_Plugin/Makefile
+++ b/src/General_Info_Plugin/Makefile
@@ -7,9 +7,9 @@ SNR_LDFLAGS ?= <-mkr_t_compile_libs->
 ROOT = ..
 CXX = g++
 CXXFLAGS = -Wall -fPIC -ggdb3
-CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE -I/usr/include/mysql $(SNR_CPPFLAGS)
+CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE $(SNR_CPPFLAGS)
 LDFLAGS = $(SNR_LDFLAGS) -L$(ROOT)/lib
-BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lmysqlclient_r -lpthread
+BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
 
 MYNAME = General_Info_Plugin
 VERSION = 2.0.0
@@ -20,9 +20,9 @@ sources = Main.cpp General_Info_Plugin.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
 CXXFLAGS +=
-CPPFLAGS += #-DWEB_QUERY_DEBUG -DDEBUG
+CPPFLAGS += -I/usr/include/mysql $(SNR_CPPFLAGS) #-DWEB_QUERY_DEBUG -DDEBUG
 LDFLAGS +=
-XTRALDLIBS = -lpluto_main
+XTRALDLIBS = -lpluto_main -lmysqlclient_r
 
 #<-mkr_B_use_mysql_wrapper_b->
 CPPFLAGS += -I/usr/include/mysql
