--- a/src/MythTV_Backend_Proxy/Makefile
+++ b/src/MythTV_Backend_Proxy/Makefile
@@ -8,7 +8,7 @@ CXX = g++
 CXXFLAGS = -Wall -fPIC -ggdb3
 CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE -I/usr/include/mysql $(SNR_CPPFLAGS)
 LDFLAGS = -L$(ROOT)/lib
-BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lmysqlclient_r -lpthread
+BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
 
 MYNAME = MythTV_Backend_Proxy
 VERSION = 2.0.0
@@ -21,7 +21,7 @@ sources = Main.cpp MythTV_Backend_Proxy.cpp $(Gen_Dev_Files)
 CXXFLAGS +=
 CPPFLAGS +=
 LDFLAGS +=
-XTRALDLIBS =
+XTRALDLIBS = -lmysqlclient_r
 
 Gen_Dev_Files +=
 sources += 	proxypeer.cpp \
