--- a/src/lmce_game/Makefile
+++ b/src/lmce_game/Makefile
@@ -4,19 +4,23 @@ CPPFLAGS =  -I.. -I../.. -I../DCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DM
 CXX = g++
 LDFLAGS = -L$(ROOT)/lib
 
-#<-mkr_B_use_mysql_wrapper_b->
-CPPFLAGS += -I/usr/include/mysql
-LDFLAGS += -lmysqlclient_r
-#<-mkr_B_use_mysql_wrapper_e->
-
-#
-
-sources = ../db_wrapper/db_wrapper.cpp ../db_wrapper/ClientSocket.cpp ../db_wrapper/Socket.cpp Database_lmce_game.cpp TableRow.cpp \
+sources += Database_lmce_game.cpp TableRow.cpp \
 Table_GameSystem.cpp \
 Table_Rom.cpp \
 Table_RomAttribute.cpp \
 Table_RomAttributeType.cpp \
 Table_Rom_RomAttribute.cpp
+
+#<-mkr_B_use_mysql_wrapper_b->
+CPPFLAGS += -I/usr/include/mysql
+LDFLAGS += -lmysqlclient_r
+#<-mkr_B_use_mysql_wrapper_e->
+
+#<-mkr_b_use_mysql_wrapper_b->
+CPPFLAGS += -DUSE_MYSQL_WRAPPER
+sources += ../db_wrapper/db_wrapper.cpp ../db_wrapper/ClientSocket.cpp ../db_wrapper/Socket.cpp
+#<-mkr_b_use_mysql_wrapper_e->
+
 
 all: liblmce_game.so all-recursive
 
