--- a/src/Orbiter/Makefile
+++ b/src/Orbiter/Makefile
@@ -32,14 +32,15 @@ LDFLAGS += -lmysqlclient_r
 #<-mkr_b_use_mysql_wrapper_e->
 
 CXXFLAGS += -g -O0
-CPPFLAGS += -I/usr/include/SDL -DORBITER -DCACHE_IMAGES -DENABLE_MOUSE_BEHAVIOR -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers -DHID_REMOTE
+CPPFLAGS += -I/usr/include/SDL -DORBITER -DCACHE_IMAGES -DENABLE_MOUSE_BEHAVIOR -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
 LDFLAGS += -L/usr/X11R6/lib
 XTRALDLIBS += -lDCECommon -lSDL -lSDL_ttf -lSDL_image -lSGE -lSDL_gfx -lXtst -lXext -lXrender -lSDL_Helpers 
 
 # Remove unnessesary libraries for Maemo Orbiter
-#ifneq (,$(findstring MAEMO_NOKIA770, $(SNR_CPPFLAGS)))
+ifneq (MAEMO_NOKIA770,$(findstring MAEMO_NOKIA770, $(SNR_CPPFLAGS)))
 XTRALDLIBS += -lhid -lGL -lGLU
-#endif
+CPPFLAGS += -DHID_REMOTE
+endif
 
 # wmctrl wrapper
 CPPFLAGS += -I/usr/X11R6/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
@@ -104,9 +105,9 @@ sources += \
 
 
 # Remove unnessesary libraries for Maemo Orbiter
-#ifneq (,$(findstring MAEMO_NOKIA770, $(SNR_CPPFLAGS)))
+ifneq (MAEMO_NOKIA770,$(findstring MAEMO_NOKIA770, $(SNR_CPPFLAGS)))
 sources += Linux/HIDInterface.cpp
-#endif
+endif
 
 #<-dceag-mf-b->
 LDLIBS = $(XTRALDLIBS) $(BASELDLIBS)
