--- a/src/MakeRelease/Makefile.MakeRelease
+++ b/src/MakeRelease/Makefile.MakeRelease
@@ -9,7 +9,9 @@ CPPFLAGS += -I/usr/include/mysql
 LDFLAGS += -lmysqlclient_r
 #<-mkr_B_use_mysql_wrapper_e->
 
-#
+#<-mkr_b_use_mysql_wrapper_b->
+CPPFLAGS += -DUSE_MYSQL_WRAPPER
+#<-mkr_b_use_mysql_wrapper_e->
 
 APPNAME = MakeRelease
 VERSION = 2.0.0
