--- a/src/UpdateMedia/Makefile
+++ b/src/UpdateMedia/Makefile
@@ -5,7 +5,7 @@ CC=$(CXX)
 CPPFLAGS=-W -Wall -pipe -ggdb3 -DUPDATE_MEDIA
 CXXFLAGS=-I. -I.. -I$(ROOT) -I$(ROOT)/DCE -I/usr/include/taglib
 LDFLAGS=-L$(ROOT)/lib -L/usr/local/lib
-LDLIBS= -lpluto_media -lpluto_main -lDCECommon -lSerializeClass -lPlutoUtils -lpthread -lid3 -ltag
+LDLIBS= -lpluto_media -lpluto_main -lDCECommon -lSerializeClass -lPlutoUtils -lpthread -lid3 -ltag -llmce_game
 
 #<-mkr_B_use_mysql_wrapper_b->
 CPPFLAGS += -I/usr/include/mysql
@@ -28,6 +28,8 @@ ID3FileHandler.cpp \
 VDRInfoFileHandler.cpp \
 FileHandlerFactory.cpp \
 TagFileHandler.cpp \
+RomFileHandler.cpp \
+GAMEROM.cpp \
 FileUtils/file_utils.cpp \
 id3info/id3info.cpp \
 $(ROOT)/Media_Plugin/MediaAttributes_LowLevel.cpp \
