--- a/src/EnOcean_TCM120/Makefile
+++ b/src/EnOcean_TCM120/Makefile
@@ -1,8 +1,7 @@
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
-SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES
-SNR_LDFLAGS ?= 
+SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
 
 ROOT = ..
 CXX = g++
