--- a/src/X-Resolution/xorg.conf.in
+++ b/src/X-Resolution/xorg.conf.in
@@ -96,6 +96,7 @@ EndSection
 
 Section "ServerFlags"
 	Option	"AllowMouseOpenFail"	"true"
+	Option  "AutoAddDevices" 	"false"
 	Option	"BlankTime"		"0"
 	Option	"StandbyTime"	"0"
 	Option	"SuspendTime"	"0"
