--- a/src/X-Resolution/xorg.conf.in
+++ b/src/X-Resolution/xorg.conf.in
@@ -6,7 +6,7 @@ Section "ServerLayout"
 EndSection
 
 Section "Files"
-	RgbPath		"/usr/X11R6/lib/X11/rgb"
+#	RgbPath		"/usr/X11R6/lib/X11/rgb"
 	ModulePath	"/usr/lib/xorg/modules"
 	FontPath	"/usr/share/fonts/X11"
 	FontPath	"/usr/X11R6/lib/X11/fonts/misc/"
