More changes to pwc, pvrusb2 to allow compile under different kernel

--- a/src/drivers/pvrusb2/driver/Makefile
+++ b/src/drivers/pvrusb2/driver/Makefile
@@ -33,6 +33,7 @@ ifeq ($(KERNELRELEASE),)
   ifeq ($(strip $(KREL)),)
     KREL := $(shell uname -r)
   endif
+  KREL := $(KVER)
   ifeq ($(strip $(KDIR)),)
     KDIR := /lib/modules/$(KREL)/build
   endif
