--- a/src/Media_Plugin/Makefile
+++ b/src/Media_Plugin/Makefile
@@ -43,7 +43,8 @@ sources += \
 	MediaStream.cpp \
 	BoundRemote.cpp \
 	Generic_NonPluto_Media.cpp \
-	MediaHandlerBase.cpp
+	MediaHandlerBase.cpp \
+	PlaylistParser.cpp
 
 #<-dceag-mf-b->!
 LDLIBS_NAMES = $(INTERNAL_LIBS_NAMES) $(EXTERNAL_LIBS_NAMES)
