refs #54 - removal of sky-digibox-dianemo dependendency

--- a/ubuntu/vdr-from-dianemo/vdr-1.6.0/debian/control
+++ b/ubuntu/vdr-from-dianemo/vdr-1.6.0/debian/control
@@ -14,7 +14,7 @@ Homepage: http://www.cadsoft.de/vdr/
 
 Package: vdr
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, psmisc, sky-digibox-dianemo, dvbsnoop
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, psmisc, dvbsnoop
 Recommends: lirc, ttf-bitstream-vera | ttf-freefont
 Provides: vdr-daemon, vdr-kbd, vdr-lirc, vdr-rcu, ${vdr:Provides}
 Conflicts: vdr-daemon, vdr-kbd, vdr-lirc, vdr-rcu, vdradmin (<< 3.4.3)
