Port to straight SDL, a la DirectFB.

--- a/src/Orbiter/Maemo/Makefile
+++ b/src/Orbiter/Maemo/Makefile
@@ -4,7 +4,7 @@ OS=os2008
 DESTDIR=build
 CC=gcc
 
-SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
+SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES -I/opt/libxine1-pluto/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include/SD
 
 CFLAGS=`pkg-config --cflags --libs gconf-2.0 hildon-1 gtk+-2.0 libosso gdk-2.0 conic` $(SNR_CPPFLAGS)
 #CFLAGS=`pkg-config --cflags --libs gconf-2.0 hildon-libs hildon-fm gtk+-2.0 libosso gdk-2.0 conic` $(SNR_CPPFLAGS)
