--- a/src/Orbiter/Makefile_DirectFB
+++ b/src/Orbiter/Makefile_DirectFB
@@ -1,15 +1,15 @@
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
-SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES -I/opt/libxine1-pluto/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include/SD
-SNR_LDFLAGS ?= -L/opt/libxine1-pluto/lib -L/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/lib
+SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
+SNR_LDFLAGS ?= <-mkr_t_compile_libs->
 
 ROOT = ..
 CXX = g++
 CXXFLAGS = -Wall -fPIC -ggdb3
 CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE $(SNR_CPPFLAGS)
 LDFLAGS = $(SNR_LDFLAGS) -L$(ROOT)/lib
-BASELDLIBS = -lpthread
+BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
 
 MYNAME = Orbiter
 VERSION = 2.0.0
@@ -23,8 +23,8 @@ sources = Main.cpp Orbiter.cpp $(Gen_Dev_Files)
 
 
 #<-mkr_B_use_mysql_wrapper_b->
-#CPPFLAGS += -I/usr/include/mysql
-#LDFLAGS += -lmysqlclient_r
+CPPFLAGS += -I/usr/include/mysql
+LDFLAGS += -lmysqlclient_r
 #<-mkr_B_use_mysql_wrapper_e->
 
 #<-mkr_b_use_mysql_wrapper_b->
@@ -32,39 +32,11 @@ sources = Main.cpp Orbiter.cpp $(Gen_Dev_Files)
 #<-mkr_b_use_mysql_wrapper_e->
 
 CXXFLAGS += -g -O0
-CPPFLAGS += -I/usr/include/SDL -DMAEMO_NOKIA770 -DDIRECTFB -DORBITER -DCACHE_IMAGES -DENABLE_MOUSE_BEHAVIOR -I$(ROOT)/DCE -I$(ROOT)/PlutoUtils -I$(ROOT)/SerializeClass -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
-XTRALDLIBS += -lSDL -lSDL_ttf -lSDL_image -lSGE -lSDL_gfx 
+CPPFLAGS += -I/usr/include/SDL -DMAEMO_NOKIA770 -DDIRECTFB -DORBITER -DCACHE_IMAGES -DENABLE_MOUSE_BEHAVIOR -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
+XTRALDLIBS += -lDCECommon -lSDL -lSDL_ttf -lSDL_image -lSGE -lSDL_gfx -lSDL_Helpers 
 
 Gen_Dev_Files +=
 sources += \
-	../DCE/ClientSocket.cpp \
-	../DCE/Command_Impl.cpp \
-	../DCE/DCEConfig.cpp \
-	../DCE/DataGrid.cpp \
-	../DCE/DeviceData_Base.cpp \
-	../DCE/DeviceData_Impl.cpp \
-	../DCE/Event_Impl.cpp \
-	../DCE/HandleRequestSocket.cpp \
-	../DCE/Logger.cpp \
-	../DCE/Message.cpp \
-	../DCE/MessageBuffer.cpp \
-	../DCE/ServerLogger.cpp \
-	../DCE/Socket.cpp \
-	../DCE/Virtual_Device_Translator.cpp \
-	../PlutoUtils/CommonIncludes.cpp \
-	../PlutoUtils/FileUtils.cpp \
-	../PlutoUtils/MultiThreadIncludes.cpp \
-	../PlutoUtils/minilzo.cpp \
-	../PlutoUtils/ProcessUtils.cpp \
-	../PlutoUtils/StringUtils.cpp \
-	../PlutoUtils/uuencode.cpp \
-	../PlutoUtils/getch.cpp \
-	../PlutoUtils/md5c.cpp \
-	../SerializeClass/SerializeClass.cpp \
-	../SDL_Helpers/SDL_CompositeAlphaChannel.cpp \
-	../SDL_Helpers/SDL_RenderText.cpp \
-	../SDL_Helpers/SDL_RenderUtils.cpp \
-	../SDL_Helpers/SDL_pixel.cpp \
 	Linux/OrbiterRenderer_Linux.cpp \
         Linux/WindowContext.cpp \
 	DesignObj_Data.cpp \
@@ -104,7 +76,10 @@ sources += \
 	SDL/SDLRendererOCGHelper.cpp \
 	SDL/SDLGraphic.cpp \
 	SDL/StartOrbiterSDL.cpp \
+	Linux/OSDScreenHandler.cpp \
 	Linux/MouseBehavior_Linux.cpp \
+	WizardLogic.cpp \
+	../CreateDevice/UserUtils.cpp \
 	$(ROOT)/Splitter/TextSplitter.cpp \
 	$(ROOT)/Splitter/TextWrapper.cpp \
 	../LIRC_DCE/IRReceiverBase.cpp
