asound.conf with HDMI sound configuration

--- a/src/BootScripts/templates/asound.conf
+++ b/src/BootScripts/templates/asound.conf
@@ -1,16 +1,32 @@
-pcm_slave.convert48k {
+pcm_slave.spdif_convert48k {
 	pcm "spdif"
 	rate 48000
 }
 
 pcm.spdif_playback {
 	type plug
-	slave convert48k
+	slave spdif_convert48k
+}
+
+pcm_slave.hdmi_convert48k {
+	pcm "hdmi"
+	rate 48000
+}
+
+pcm.hdmi_playback {
+	type plug
+	slave hdmi_convert48k
 }
 
 pcm.asym_spdif {
 	type asym
 	playback.pcm "spdif_playback"
+	capture.pcm "plughw:0"
+}
+
+pcm.asym_hdmi {
+	type asym
+	playback.pcm "hdmi_playback"
 	capture.pcm "plughw:0"
 }
 
