--- a/src/Orbiter/Makefile_padorbiter
+++ b/src/Orbiter/Makefile_padorbiter
@@ -1,12 +1,12 @@
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
-SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES -I/opt/libxine1-pluto/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include -I/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/include/SD
-SNR_LDFLAGS ?= -L/opt/libxine1-pluto/lib -L/opt/libsdl1.2-1.2.7+1.2.8cvs20041007/lib
+SNR_CPPFLAGS ?= -DKDE_LMCE
+SNR_LDFLAGS ?= 
 
 ROOT = ..
 CXX = g++
-CXXFLAGS = -Wall -fPIC -ggdb3
+CXXFLAGS = -Wall -fPIC
 CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE $(SNR_CPPFLAGS)
 LDFLAGS = $(SNR_LDFLAGS) -L$(ROOT)/lib
 BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
@@ -23,16 +23,16 @@ sources = Main.cpp Orbiter.cpp $(Gen_Dev_Files)
 
 
 #<-mkr_B_use_mysql_wrapper_b->
-CPPFLAGS += -I/usr/include/mysql
-LDFLAGS += -lmysqlclient_r
+#CPPFLAGS += -I/usr/include/mysql
+#LDFLAGS += -lmysqlclient_r
 #<-mkr_B_use_mysql_wrapper_e->
 
 #<-mkr_b_use_mysql_wrapper_b->
 #CPPFLAGS += -DUSE_MYSQL_WRAPPER
 #<-mkr_b_use_mysql_wrapper_e->
 
-CXXFLAGS += -g -O0
-CPPFLAGS += -I/usr/include/SDL -DPADORBITER -DORBITER -DCACHE_IMAGES -DENABLE_MOUSE_BEHAVIOR -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
+CXXFLAGS += -O3
+CPPFLAGS += -I/usr/include/SDL -DPADORBITER -DORBITER -DCACHE_IMAGES -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
 LDFLAGS += -L/usr/X11R6/lib
 XTRALDLIBS += -lDCECommon -lSDL -lSDL_ttf -lSDL_image -lSGE -lSDL_gfx -lXtst -lXext -lXrender -lSDL_Helpers 
 
@@ -64,19 +64,6 @@ sources += \
 	ScreenHandler.cpp \
 	CallBackData.cpp \
 	ScreenHistory.cpp \
-	MouseBehavior.cpp \
-	LightMouseHandler.cpp \
-	SpeedMouseHandler.cpp \
-	VolumeMouseHandler.cpp \
-	MediaMouseHandler.cpp \
-	EPGMouseHandler.cpp \
-	LockedMouseHandler.cpp \
-	KeyboardMouseHandler.cpp \
-	HorizMenuMouseHandler.cpp \
-	MediaBrowserMouseHandler.cpp \
-	DatagridMouseHandlerHelper.cpp \
-	MouseGovernor.cpp \
-	MouseIterator.cpp \
 	PlutoGraphic.cpp \
 	OrbiterRenderer.cpp \
 	OrbiterRendererFactory.cpp \
@@ -87,10 +74,6 @@ sources += \
 	SDL/SDLRendererOCGHelper.cpp \
 	SDL/SDLGraphic.cpp \
 	SDL/StartOrbiterSDL.cpp \
-	Linux/OSDScreenHandler.cpp \
-	Linux/MouseBehavior_Linux.cpp \
-	WizardLogic.cpp \
-	../CreateDevice/UserUtils.cpp \
 	$(ROOT)/Splitter/TextSplitter.cpp \
 	$(ROOT)/Splitter/TextWrapper.cpp \
 	Linux/X3DButton.cpp Linux/X3DWindow.cpp Linux/XProgressWnd.cpp Linux/XPromptUser.cpp \
