--- a/src/Game_Player/Makefile
+++ b/src/Game_Player/Makefile
@@ -51,7 +51,7 @@ Game_Player: $(sources:.cpp=.o)
 	./post_make.sh $@
 
 clean: clean-recursive
-	rm -f $(call cpath,$(sources:.cpp=.o) $(sources:.cpp=.d)) Game_Player.bin Game_Player.so >/dev/null
+	rm -f $(call cpath,$(sources:.cpp=.o) $(sources:.cpp=.d)) Game_Player Game_Player.so >/dev/null
 
 package:
 	chmod +x make_package.sh
