Refs #515 - typo fix

--- a/ubuntu/v4l-modules-source/debian/rules
+++ b/ubuntu/v4l-modules-source/debian/rules
@@ -31,7 +31,7 @@ configure-stamp:
 
 
 build: build-stamp
-	for file in dkms.conf debian/v4l2-modules.postinst debian/v4l2-modules.prerm debian.v4l2-firmware.preinst ; do \
+	for file in dkms.conf debian/v4l2-modules.postinst debian/v4l2-modules.prerm debian/v4l2-firmware.preinst ; do \
 		sed -r 's,package_version,$(PKGVER),g' $$file.in >$$file; \
 	done
 
