Hulu Player: Make LIRCD thread able to close, Formatting cleanup, and removal of the old X based window code now that the LIRCD stuff is there.

--- a/src/Hulu_Player/Makefile
+++ b/src/Hulu_Player/Makefile
@@ -22,7 +22,7 @@ sources = Main.cpp Hulu_Player.cpp $(Gen_Dev_Files)
 CXXFLAGS +=
 CPPFLAGS +=
 LDFLAGS +=
-XTRALDLIBS = -lX11 -lXmu -lXtst -lWindowUtils -lmysqlclient_r
+XTRALDLIBS = -lmysqlclient_r
 
 Gen_Dev_Files +=
 sources += LIRCD_Thread.cpp
