The new and improved activate orbiter plasmoid. Only does a messagesend now, Fixes #629

--- a/src/ActivateOrbiter/CMakeLists.txt
+++ b/src/ActivateOrbiter/CMakeLists.txt
@@ -24,7 +24,7 @@ link_directories(
 ADD_DEFINITIONS(-fPIC -fexceptions -Wall -ggdb3)
 
 # We add our source code here
-set(activateorbiter_SRCS plasma-activateorbiter.cpp ../Gen_Devices/Activate_Orbiter_PlasmoidBase.cpp Activate_Orbiter_Plasmoid.cpp DB.cpp)
+set(activateorbiter_SRCS plasma-activateorbiter.cpp DB.cpp)
  
 # Now make sure all files get to the right place
 kde4_add_plugin(plasma_applet_activateorbiter ${activateorbiter_SRCS})
