Refs #650 first working version of Picture_Viewer

--- a/src/Picture_Viewer/Makefile
+++ b/src/Picture_Viewer/Makefile
@@ -20,12 +20,13 @@ sources = Main.cpp Picture_Viewer.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
 CXXFLAGS +=
-CPPFLAGS +=
-LDFLAGS +=
+CPPFLAGS += -I/usr/include/SDL -I/usr/include/exiv2
+LDFLAGS += -lGL -lGLU -lSDL -lSDL_image -lSDL_ttf -lXrender -lglib-2.0 -lXmu -lSDL_gfx -lexiv2
 XTRALDLIBS = -lmysqlclient_r
 
 Gen_Dev_Files +=
-sources +=
+sources += Picture.cpp \
+	PictureCanvas.cpp
 
 #<-dceag-mf-b->
 LDLIBS = $(XTRALDLIBS) $(BASELDLIBS)
