refs #675 - update asound.conf at boot to match the designated default sound card

--- a/src/BootScripts/templates/asound.conf
+++ b/src/BootScripts/templates/asound.conf
@@ -1,5 +1,5 @@
 pcm_slave.spdif_convert48k {
-	pcm "spdif"
+	pcm "spdif:%MAIN_CARD%"
 	rate 48000
 }
 
@@ -9,7 +9,7 @@ pcm.spdif_playback {
 }
 
 pcm_slave.hdmi_convert48k {
-	pcm "hdmi"
+	pcm "hdmi:%MAIN_CARD%"
 	rate 48000
 }
 
@@ -21,17 +21,17 @@ pcm.hdmi_playback {
 pcm.asym_spdif {
 	type asym
 	playback.pcm "spdif_playback"
-	capture.pcm "plughw:0"
+	capture.pcm "plughw:%MAIN_CARD%"
 }
 
 pcm.asym_hdmi {
 	type asym
 	playback.pcm "hdmi_playback"
-	capture.pcm "plughw:0"
+	capture.pcm "plughw:%MAIN_CARD%"
 }
 
 pcm.asym_analog {
 	type asym
-	playback.pcm "plug:dmix"
-	capture.pcm "plughw:0"
+	playback.pcm "plug:dmix:%MAIN_CARD%"
+	capture.pcm "plughw:%MAIN_CARD%"
 }
