change dkms.conf file to match new naming convension in rules file missed this file earlier :P

--- a/ubuntu/v4l-modules-source/dkms.conf
+++ b/ubuntu/v4l-modules-source/dkms.conf
@@ -1,5 +1,5 @@
 PACKAGE_NAME="v4l2-modules"
-PACKAGE_VERSION="304cfde05b3f"
+PACKAGE_VERSION="lmce20100531"
 CLEAN="make clean"
 MAKE="make"
 AUTOINSTALL="yes"
